Update: Code refactoring
- Moved class to new folder
- Updated to renamed classes